--- a/docker-compose-elk.yml
+++ b/docker-compose-elk.yml
@@ -48,7 +48,7 @@ services:
       ELASTICSEARCH_URL: ${ES_URL}
       ES_USERNAME: ${ES_USERNAME}
       ES_PASSWORD: ${ES_PASSWORD}
-      XPACK_MONITORING_UI_CONTAINER_ELASTICSEARCH_ENABLED: 'true'
+      #XPACK_MONITORING_UI_CONTAINER_ELASTICSEARCH_ENABLED: 'true'
     volumes:
       - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
     logging:
