--- a/docker-compose-geohealthcheck.yml
+++ b/docker-compose-geohealthcheck.yml
@@ -8,6 +8,16 @@ services:
     restart: unless-stopped
     environment:
       SCRIPT_NAME: ${SCRIPT_NAME}
+      SQLALCHEMY_DATABASE_URI: ${SQLALCHEMY_DATABASE_URI}
+      GHC_NOTIFICATIONS: ${GHC_NOTIFICATIONS}
+      GHC_ADMIN_EMAIL:  ${GHC_ADMIN_EMAIL}
+      GHC_NOTIFICATIONS_EMAIL: ${GHC_NOTIFICATIONS_EMAIL}
+      GHC_SMTP_SERVER: ${GHC_SMTP_SERVER}
+      GHC_SMTP_PORT: ${GHC_SMTP_PORT}
+      GHC_SMTP_TLS: ${GHC_SMTP_TLS}
+      GHC_SMTP_SSL: ${GHC_SMTP_SSL}
+      GHC_SMTP_USERNAME: ${GHC_SMTP_USERNAME}
+      GHC_SMTP_PASSWORD: ${GHC_SMTP_PASSWORD}
     ports:
       - "8082:80"
     networks:
